# PyCal

./: LICENSE  PyCalc Prototype.epgz  README.md  pyproject.toml
devenv/: pyvenv.cfg
devenv/Scripts/: activate  activate.bat
pycalc/: __init__.py  __main__.py  about.py  calculator.py  circuits.py  cli.py  cpu.py  window.py
pycalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
