[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pycalc"
dynamic = ["version"]
description = "PyCalc is a basic mathematical calculator implemented using Python 3 and PyQt6"
readme = "README.md"
authors = [{ name = "Real Python", email = "info@realpython.com" }]
dependencies = [
    'pyqt6; python_version >= "3.6.1"',
]
license = {file = "LICENSE"}

[tool.setuptools]
packages = ["pycalc"]

[project.scripts]
rplife = "pycalc.__main__:main"

[tool.setuptools.dynamic]
version = {attr = "pycalc.__version__"}

